# Kazel

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
Kazel/: CMakeLists.txt
Kazel/include/: Kazel.h
Kazel/src/: CMakeLists.txt  kzpch.cpp  kzpch.h
Kazel/src/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCode.h  KeyMouseCode.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h  log.txt
Kazel/src/Debug/: Instrumentor.h
Kazel/src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Kazel/src/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
Kazel/src/ModelLoad/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
Kazel/src/OpenGlobe/: Ellipsoid.cpp  Ellipsoid.h  Geodetic.h  GeographicGridEllipsoidTessellator.cpp  GeographicGridEllipsoidTessellator.h
Kazel/src/Platform/OpenGl/: OpenGlBuffer.cpp  OpenGlBuffer.h  OpenGlContext.cpp  OpenGlContext.h  OpenGlFramebuffer.cpp  OpenGlFramebuffer.h  OpenGlRendererAPI.cpp  OpenGlRendererAPI.h  OpenGlShader.cpp  OpenGlShader.h  OpenGlTexture.cpp  OpenGlTexture.h  OpenGlVertexArray.cpp  OpenGlVertexArray.h
Kazel/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Kazel/src/Renderer/: Buffer.cpp  Buffer.h  Camera.h  CameraLookAtPoint.cpp  CameraLookAtPoint.h  ClearState.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectCamera.cpp  PerspectCamera.h  RenderCommand.cpp  RenderCommand.h  RenderState.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.h  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Kazelnut/: CMakeLists.txt
Kazelnut/src/: KazelnutApp.cpp  ObjectLayer.cpp  ObjectLayer.h
Kazelnut/src/Light/: Light.cpp  Light.h  light.frag  light.vert
Kazelnut/src/Model/: Sphere.h
OpenGlobe/: CMakeLists.txt
OpenGlobe/resources/: globe.frag.glsl  globe.vert.glsl  plane.frag.glsl  plane.vert.glsl  test.frag.glsl  test.vert.glsl
OpenGlobe/scripts/: copyResources.py
OpenGlobe/src/: GlobeLayer.cpp  GlobeLayer.h  KazelnutApp.cpp  TestLayer.cpp  TestLayer.h
